# cypto-price-model

./: .gitignore  README.md  btc-daily-price.csv  crypto-price-model-sandbox.ipynb  pyproject.toml  sentiment-analysis.ipynb
.ipynb_checkpoints/: crypto-price-model-sandbox-checkpoint.ipynb
