[tool.poetry]
name = "crypto-price-model"
version = "0.1.0"
description = "model to predict cryptocurrency prices"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "crypto_price_model"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
