[tool.poetry]
name = "crypto-price-model"
version = "0.1.0"
description = "model to predict cryptocurrency prices"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "crypto_price_model"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
pandas = "^1.5.3"
jupyter = "^1.0.0"
notebook = "^6.5.3"
scikit-learn = "^1.2.2"
prophet = "^1.1.2"
plotly = "^5.14.0"
requests = "^2.28.2"
seaborn = "^0.12.2"
tweepy = "^4.13.0"
textblob = "^0.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
